[package]
name = "vmf_parser_nom"
version = "0.1.1"
authors = ["RedRam"]
description = "A parser for the Valve map format."
repository = "https://github.com/RedRam567/vmf_parser_nom"
readme = "README.md"
keywords = ["vmf", "parser", "valve", "hammer"]
categories = ["parsing"]
license = "MIT"
edition = "2021"

[dependencies]
nom = "7"
# union to save dat 1 usize
# smallvec = { version = "1", features = ["const_new", "union", "const_generics"], optional = true }

[dev-dependencies]
traversal = "0.1.2"

# [features]
# default = ["owned"]
# owned = []
# arena = ["smallvec"]
